--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
     <title>Skeleton HTML</title>
 
     <!-- CSS -->
-    <link href="../dist/css/style-index.css" rel="stylesheet">
+    <link href="dist/css/style-index.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -36,6 +36,6 @@
         </div-->
     </div>
 </div>
-<script type="text/javascript" src="dist/js/scripts.js"></script>
+<script type="text/javascript" src="dist/js/scripts.min.js"></script>
 </body>
 </html>
